[package]
name = "remouillage"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
unzip3 = "1.0.0"
fontdue = "0.9.2"

[[bin]]
name = "remouillage_example"
path = "examples/demo/bin.rs"

[lib]
