[package]
name = "remouillage"
version = "0.1.0"
edition = "2021"

[dependencies]
gltf = "1.4.1"  # For reading glTF files
glam = "0.24.0"  # For vector math (Vec2 and Vec3)
image = "0.24"
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
unzip3 = "1.0.0"
fontdue = "0.9.2"

[[bin]]
name = "remouillage_example"
path = "examples/demo/bin.rs"

[lib]
